geo_question_parser_haiqi/Grammar1/GeoAnQuParser.py
# Generated from GeoAnQu.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GeoAnQuParser ( Parser ):

    grammarFileName = "GeoAnQu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'that'", "'and'", "'with'", "'for each'", 
                     "'per'", "'in'", "'near'", "'on'", "'from'", "'to'", 
                     "'of'", "'for'", "'during'", "'each'", "'new'", "'through'", 
                     "'by'", "'weighted by'", "'with similar'", "'best site'", 
                     "'best sites'", "'grids'", "'grid cells'", "'grid'", 
                     "'grid cell'", "'hexagonal grids'", "'hexagonal grid'", 
                     "'hexagon grid'", "'diameter of'", "'area'", "'buffer area'", 
                     "'distance'", "'buffer areas'", "'or'", "'equantity'", 
                     "'epercent'", "'edate'", "'etime'", "'circle'", "'rectangle'", 
                     "'nearest neighbors'", "'distance band'", "'increments'", 
                     "'network'", "'networkquality'", "'object'", "'placename'", 
                     "'event'", "'field'", "'objectquality'", "'eventquality'", 
                     "'objconamount'", "'eveconamount'", "'conamount'", 
                     "'covamount'", "'amount'", "'objconobjconpro'", "'eveconobjconpro'", 
                     "'objconobjcovpro'", "'eveconobjcovpro'", "'conconpro'", 
                     "'concovpro'", "'covpro'", "'proportion'", "'world'", 
                     "<INVALID>", "'where'", "<INVALID>", "'how many'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WH", "Location1", "Location2", 
                      "ConAm", "AUX", "Flase", "Aggregate", "TOPO", "Boolean", 
                      "Extrema", "Distance", "ExtreDist", "Compare", "ML", 
                      "DIGIT", "WS", "COMMA" ]

    RULE_start = 0
    RULE_false = 1
    RULE_measure = 2
    RULE_measure1 = 3
    RULE_location = 4
    RULE_conAm = 5
    RULE_weight = 6
    RULE_allocation = 7
    RULE_condition = 8
    RULE_grid = 9
    RULE_boolField = 10
    RULE_distField = 11
    RULE_serviceObj = 12
    RULE_origin = 13
    RULE_destination = 14
    RULE_subcon = 15
    RULE_aggre = 16
    RULE_topoR = 17
    RULE_topoRIn = 18
    RULE_boolR = 19
    RULE_extremaR = 20
    RULE_distanceR = 21
    RULE_extreDist = 22
    RULE_compareR = 23
    RULE_quantity = 24
    RULE_date = 25
    RULE_time = 26
    RULE_percent = 27
    RULE_densityNei = 28
    RULE_distBandNei = 29
    RULE_distBand = 30
    RULE_networkC = 31
    RULE_networkQ = 32
    RULE_objectC = 33
    RULE_eventC = 34
    RULE_coreC = 35
    RULE_support = 36
    RULE_extent = 37
    RULE_temEx = 38

    ruleNames =  [ "start", "false", "measure", "measure1", "location", 
                   "conAm", "weight", "allocation", "condition", "grid", 
                   "boolField", "distField", "serviceObj", "origin", "destination", 
                   "subcon", "aggre", "topoR", "topoRIn", "boolR", "extremaR", 
                   "distanceR", "extreDist", "compareR", "quantity", "date", 
                   "time", "percent", "densityNei", "distBandNei", "distBand", 
                   "networkC", "networkQ", "objectC", "eventC", "coreC", 
                   "support", "extent", "temEx" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    WH=66
    Location1=67
    Location2=68
    ConAm=69
    AUX=70
    Flase=71
    Aggregate=72
    TOPO=73
    Boolean=74
    Extrema=75
    Distance=76
    ExtreDist=77
    Compare=78
    ML=79
    DIGIT=80
    WS=81
    COMMA=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.ConditionContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.ConditionContext,i)


        def measure1(self):
            return self.getTypedRuleContext(GeoAnQuParser.Measure1Context,0)


        def subcon(self):
            return self.getTypedRuleContext(GeoAnQuParser.SubconContext,0)


        def support(self):
            return self.getTypedRuleContext(GeoAnQuParser.SupportContext,0)


        def temEx(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.TemExContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.TemExContext,i)


        def WH(self):
            return self.getToken(GeoAnQuParser.WH, 0)

        def measure(self):
            return self.getTypedRuleContext(GeoAnQuParser.MeasureContext,0)


        def false(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.FalseContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.FalseContext,i)


        def extent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.ExtentContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.ExtentContext,i)


        def AUX(self, i:int=None):
            if i is None:
                return self.getTokens(GeoAnQuParser.AUX)
            else:
                return self.getToken(GeoAnQuParser.AUX, i)

        def extremaR(self):
            return self.getTypedRuleContext(GeoAnQuParser.ExtremaRContext,0)


        def extreDist(self):
            return self.getTypedRuleContext(GeoAnQuParser.ExtreDistContext,0)


        def getRuleIndex(self):
            return GeoAnQuParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GeoAnQuParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GeoAnQuParser.WH]:
                self.state = 78
                self.match(GeoAnQuParser.WH)
                self.state = 92
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GeoAnQuParser.AUX]:
                    self.state = 79
                    self.match(GeoAnQuParser.AUX)
                    self.state = 82
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [GeoAnQuParser.Extrema]:
                        self.state = 80
                        self.extremaR()
                        pass
                    elif token in [GeoAnQuParser.ExtreDist]:
                        self.state = 81
                        self.extreDist()
                        pass
                    elif token in [GeoAnQuParser.T__43, GeoAnQuParser.T__44, GeoAnQuParser.T__45, GeoAnQuParser.T__47, GeoAnQuParser.T__48, GeoAnQuParser.T__49, GeoAnQuParser.T__50, GeoAnQuParser.T__51, GeoAnQuParser.T__52, GeoAnQuParser.T__53, GeoAnQuParser.T__54, GeoAnQuParser.T__55, GeoAnQuParser.T__56, GeoAnQuParser.T__57, GeoAnQuParser.T__58, GeoAnQuParser.T__59, GeoAnQuParser.T__60, GeoAnQuParser.T__61, GeoAnQuParser.T__62, GeoAnQuParser.T__63, GeoAnQuParser.Location1, GeoAnQuParser.Location2, GeoAnQuParser.ConAm, GeoAnQuParser.Aggregate, GeoAnQuParser.DIGIT]:
                        pass
                    else:
                        pass
                    self.state = 84
                    self.measure()
                    pass
                elif token in [GeoAnQuParser.T__43, GeoAnQuParser.T__44, GeoAnQuParser.T__45, GeoAnQuParser.T__47, GeoAnQuParser.T__48, GeoAnQuParser.T__49, GeoAnQuParser.T__50, GeoAnQuParser.T__51, GeoAnQuParser.T__52, GeoAnQuParser.T__53, GeoAnQuParser.T__54, GeoAnQuParser.T__55, GeoAnQuParser.T__56, GeoAnQuParser.T__57, GeoAnQuParser.T__58, GeoAnQuParser.T__59, GeoAnQuParser.T__60, GeoAnQuParser.T__61, GeoAnQuParser.T__62, GeoAnQuParser.T__63, GeoAnQuParser.Location1, GeoAnQuParser.Location2, GeoAnQuParser.ConAm, GeoAnQuParser.Aggregate, GeoAnQuParser.DIGIT]:
                    self.state = 85
                    self.measure()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==GeoAnQuParser.AUX:
                        self.state = 86
                        self.match(GeoAnQuParser.AUX)


                    self.state = 90
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 89
                        self.false()


                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [GeoAnQuParser.T__43, GeoAnQuParser.T__44, GeoAnQuParser.T__45, GeoAnQuParser.T__47, GeoAnQuParser.T__48, GeoAnQuParser.T__49, GeoAnQuParser.T__50, GeoAnQuParser.T__51, GeoAnQuParser.T__52, GeoAnQuParser.T__53, GeoAnQuParser.T__54, GeoAnQuParser.T__55, GeoAnQuParser.T__56, GeoAnQuParser.T__57, GeoAnQuParser.T__58, GeoAnQuParser.T__59, GeoAnQuParser.T__60, GeoAnQuParser.T__61, GeoAnQuParser.T__62, GeoAnQuParser.T__63, GeoAnQuParser.Location1, GeoAnQuParser.Location2, GeoAnQuParser.ConAm, GeoAnQuParser.Aggregate, GeoAnQuParser.DIGIT]:
                self.state = 94
                self.measure()
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.match(GeoAnQuParser.T__0)


                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.AUX:
                    self.state = 98
                    self.match(GeoAnQuParser.AUX)


                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.false()


                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 106
                    self.condition()
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        self.state = 107
                        self.match(GeoAnQuParser.T__1)

                    elif la_ == 2:
                        self.state = 108
                        self.false()

             
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GeoAnQuParser.T__9:
                self.state = 116
                self.measure1()


            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 124
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GeoAnQuParser.T__2]:
                    self.state = 119
                    self.match(GeoAnQuParser.T__2)
                    pass
                elif token in [GeoAnQuParser.T__0]:
                    self.state = 120
                    self.match(GeoAnQuParser.T__0)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==GeoAnQuParser.AUX:
                        self.state = 121
                        self.match(GeoAnQuParser.AUX)


                    pass
                elif token in [GeoAnQuParser.T__30, GeoAnQuParser.T__32, GeoAnQuParser.T__34, GeoAnQuParser.T__35, GeoAnQuParser.T__37, GeoAnQuParser.T__45, GeoAnQuParser.T__47, GeoAnQuParser.T__48, GeoAnQuParser.T__49, GeoAnQuParser.T__50, GeoAnQuParser.T__51, GeoAnQuParser.T__52, GeoAnQuParser.T__53, GeoAnQuParser.T__54, GeoAnQuParser.T__55, GeoAnQuParser.T__56, GeoAnQuParser.T__57, GeoAnQuParser.T__58, GeoAnQuParser.T__59, GeoAnQuParser.T__60, GeoAnQuParser.T__61, GeoAnQuParser.T__62, GeoAnQuParser.T__63, GeoAnQuParser.Flase, GeoAnQuParser.TOPO, GeoAnQuParser.Extrema, GeoAnQuParser.Distance, GeoAnQuParser.Compare]:
                    pass
                else:
                    pass
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.Flase:
                    self.state = 126
                    self.false()


                self.state = 129
                self.subcon()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GeoAnQuParser.T__3 or _la==GeoAnQuParser.T__4:
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==GeoAnQuParser.T__3 or _la==GeoAnQuParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.support()


            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 136
                self.condition()


            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==GeoAnQuParser.T__5 or _la==GeoAnQuParser.T__6:
                        self.state = 139
                        _la = self._input.LA(1)
                        if not(_la==GeoAnQuParser.T__5 or _la==GeoAnQuParser.T__6):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 146 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 142
                            self.extent()
                            self.state = 144
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==GeoAnQuParser.T__1:
                                self.state = 143
                                self.match(GeoAnQuParser.T__1)



                        else:
                            raise NoViableAltException(self)
                        self.state = 148 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
             
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeoAnQuParser.T__5) | (1 << GeoAnQuParser.T__7) | (1 << GeoAnQuParser.T__8) | (1 << GeoAnQuParser.T__36))) != 0):
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeoAnQuParser.T__5) | (1 << GeoAnQuParser.T__7) | (1 << GeoAnQuParser.T__8))) != 0):
                    self.state = 155
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeoAnQuParser.T__5) | (1 << GeoAnQuParser.T__7) | (1 << GeoAnQuParser.T__8))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 158
                self.temEx()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.T__9:
                    self.state = 159
                    self.match(GeoAnQuParser.T__9)


                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.T__36:
                    self.state = 162
                    self.temEx()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FalseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Flase(self):
            return self.getToken(GeoAnQuParser.Flase, 0)

        def getRuleIndex(self):
            return GeoAnQuParser.RULE_false

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)




    def false(self):

        localctx = GeoAnQuParser.FalseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_false)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(GeoAnQuParser.Flase)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeasureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(GeoAnQuParser.LocationContext,0)


        def conAm(self):
            return self.getTypedRuleContext(GeoAnQuParser.ConAmContext,0)


        def coreC(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.CoreCContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.CoreCContext,i)


        def aggre(self):
            return self.getTypedRuleContext(GeoAnQuParser.AggreContext,0)


        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(GeoAnQuParser.DIGIT)
            else:
                return self.getToken(GeoAnQuParser.DIGIT, i)

        def weight(self):
            return self.getTypedRuleContext(GeoAnQuParser.WeightContext,0)


        def distBandNei(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.DistBandNeiContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.DistBandNeiContext,i)


        def networkC(self):
            return self.getTypedRuleContext(GeoAnQuParser.NetworkCContext,0)


        def networkQ(self):
            return self.getTypedRuleContext(GeoAnQuParser.NetworkQContext,0)


        def destination(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.DestinationContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.DestinationContext,i)


        def origin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeoAnQuParser.OriginContext)
            else:
                return self.getTypedRuleContext(GeoAnQuParser.OriginContext,i)


        def getRuleIndex(self):
            return GeoAnQuParser.RULE_measure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeasure" ):
                listener.enterMeasure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeasure" ):
                listener.exitMeasure(self)




    def measure(self):

        localctx = GeoAnQuParser.MeasureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_measure)
        self._la = 0 # Token type
        try:
            self.state = 251
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,44,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.location()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.conAm()
                self.state = 171
                self.coreC()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.Aggregate:
                    self.state = 173
                    self.aggre()


                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.DIGIT:
                    self.state = 176
                    self.match(GeoAnQuParser.DIGIT)


                self.state = 183 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 179
                        self.coreC()
                        self.state = 181
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==GeoAnQuParser.T__1:
                            self.state = 180
                            self.match(GeoAnQuParser.T__1)



                    else:
                        raise NoViableAltException(self)
                    self.state = 185 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,28,self._ctx)

                self.state = 203
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,33,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 187
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GeoAnQuParser.T__9) | (1 << GeoAnQuParser.T__10) | (1 << GeoAnQuParser.T__11) | (1 << GeoAnQuParser.T__12))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 189
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==GeoAnQuParser.DIGIT:
                            self.state = 188
                            self.match(GeoAnQuParser.DIGIT)


                        self.state = 192
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==GeoAnQuParser.T__13:
                            self.state = 191
                            self.match(GeoAnQuParser.T__13)


                        self.state = 195
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==GeoAnQuParser.T__14:
                            self.state = 194
                            self.match(GeoAnQuParser.T__14)


                        self.state = 199
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [GeoAnQuParser.T__45, GeoAnQuParser.T__47, GeoAnQuParser.T__48, GeoAnQuParser.T__49, GeoAnQuParser.T__50, GeoAnQuParser.T__51, GeoAnQuParser.T__52, GeoAnQuParser.T__53, GeoAnQuParser.T__54, GeoAnQuParser.T__55, GeoAnQuParser.T__56, GeoAnQuParser.T__57, GeoAnQuParser.T__58, GeoAnQuParser.T__59, GeoAnQuParser.T__60, GeoAnQuParser.T__61, GeoAnQuParser.T__62, GeoAnQuParser.T__63]:
                            self.state = 197
                            self.coreC()
                            pass
                        elif token in [GeoAnQuParser.T__40]:
                            self.state = 198
                            self.distBandNei()
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 205
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,33,self._ctx)

                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.T__17 or _la==GeoAnQuParser.T__18:
                    self.state = 206
                    self.weight()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GeoAnQuParser.Aggregate:
                    self.state = 209
                    self.aggre()

